feat: Remove CDN imports and use local CSS
This commit removes CDN imports for Tailwind CSS and RxJS, replacing them with local imports. The `index.html` file no longer directly includes Tailwind CSS via CDN and removes the extensive import map for Angular and RxJS. Instead, `angular.json` now points to `src/styles.css` for styles, and `src/styles.css` itself imports Tailwind CSS. This change improves build performance and allows for better control over dependencies.

--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,9 @@
               "browser": "."
             },
             "browser": "index.tsx",
+            "styles": [
+              "src/styles.css"
+            ],
             "tsConfig": "tsconfig.json"
           },
           "configurations": {
